<resources>
    <string name="app_name">Homework_006</string>
    <string name="profile_information">PROFILE INFORMATION</string>
    <string name="david">David</string>
    <string name="avalishvili">Avalishvili</string>
    <string name="d_avalishvili_gmail_com">d.avalishvili@gmail.com</string>
    <string name="dob_28_08_1982">28-08-1982</string>
    <string name="male">Male</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="sex">SEX</string>
    <string name="dob">DOB</string>
    <string name="email">EMAIL</string>
    <string name="last_name">LAST NAME</string>
    <string name="enter_last_name">enter last name</string>
    <string name="enter_email">enter email</string>
    <string name="enter_dob">enter DOB</string>
    <string name="enter_sex">enter sex</string>
    <string name="save_profile">SAVE PROFILE</string>
    <string name="enter_name">enter name</string>
    <string name="name">NAME</string>
    <string name="edit_profile_information">EDIT PROFILE INFORMATION</string>
    <string name="empty_fields">fill empty fields</string>
    <string name="wrong_email">wrong email type</string>
</resources>