<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_information"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/gdLeft"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0"
        android:layout_marginTop="10dp"
        />

    <ImageView
        android:id="@+id/iVProfilePicture"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="57dp"
        app:layout_constraintEnd_toEndOf="@id/gdEndMargin"
        app:layout_constraintStart_toStartOf="@id/gdLeft"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/avatar"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="NAME"
        android:layout_marginBottom="-5dp"
        app:layout_constraintStart_toStartOf="@id/gdBeginMargin"
        app:layout_constraintBottom_toTopOf="@id/tVName"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tVName"
        android:layout_width="0dp"
        android:layout_height="@dimen/tvheight"
        android:background="@drawable/stroke"
        android:gravity=""

        android:paddingStart="@dimen/paddingStart"
        android:text="@string/david"
        app:layout_constraintBottom_toTopOf="@+id/tVLastName"

        app:layout_constraintEnd_toEndOf="@+id/tVLastName"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/gdBeginMargin"
        app:layout_constraintTop_toBottomOf="@+id/iVProfilePicture"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:layout_marginBottom="-5dp"
        app:layout_constraintStart_toStartOf="@id/gdBeginMargin"
        app:layout_constraintBottom_toTopOf="@id/tVLastName"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tVLastName"
        android:layout_width="0dp"
        android:layout_height="@dimen/tvheight"
        android:layout_marginTop="@dimen/marginTop"
        android:background="@drawable/stroke"
        android:gravity=""
        android:paddingStart="@dimen/paddingStart"
        android:text="@string/avalishvili"
        app:layout_constraintBottom_toTopOf="@+id/tVeMail"
        app:layout_constraintEnd_toEndOf="@+id/tVeMail"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/gdBeginMargin"
        app:layout_constraintTop_toBottomOf="@+id/tVName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_marginBottom="-5dp"
        app:layout_constraintStart_toStartOf="@id/gdBeginMargin"
        app:layout_constraintBottom_toTopOf="@id/tVeMail"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tVeMail"
        android:layout_width="0dp"
        android:layout_height="@dimen/tvheight"
        android:layout_marginTop="@dimen/marginTop"
        android:background="@drawable/stroke"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/paddingStart"
        android:text="@string/d_avalishvili_gmail_com"
        app:layout_constraintBottom_toTopOf="@+id/tVDOB"
        app:layout_constraintEnd_toEndOf="@+id/tVDOB"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/gdBeginMargin"
        app:layout_constraintTop_toBottomOf="@+id/tVLastName" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dob"
        android:layout_marginBottom="-5dp"
        app:layout_constraintStart_toStartOf="@id/gdBeginMargin"
        app:layout_constraintBottom_toTopOf="@id/tVDOB"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tVDOB"
        android:layout_width="0dp"
        android:layout_height="@dimen/tvheight"
        android:layout_marginTop="@dimen/marginTop"
        android:background="@drawable/stroke"
        android:gravity=""
        android:paddingStart="@dimen/paddingStart"
        android:text="@string/dob_28_08_1982"
        app:layout_constraintBottom_toTopOf="@+id/tVSex"
        app:layout_constraintEnd_toEndOf="@+id/tVSex"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/gdBeginMargin"
        app:layout_constraintTop_toBottomOf="@+id/tVeMail" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sex"
        android:layout_marginBottom="-5dp"
        app:layout_constraintStart_toStartOf="@id/gdBeginMargin"
        app:layout_constraintBottom_toTopOf="@id/tVSex"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tVSex"
        android:layout_width="0dp"
        android:layout_height="@dimen/tvheight"
        android:layout_marginTop="@dimen/marginTop"
        android:background="@drawable/stroke"
        android:gravity=""
        android:paddingStart="@dimen/paddingStart"
        android:text="@string/male"
        app:layout_constraintBottom_toTopOf="@+id/btnEditProfile"
        app:layout_constraintEnd_toEndOf="@+id/btnEditProfile"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/gdBeginMargin"
        app:layout_constraintTop_toBottomOf="@+id/tVDOB" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnEditProfile"
        android:layout_width="0dp"
        android:layout_height="@dimen/tvheight"
        android:layout_marginTop="@dimen/marginTop"
        android:background="@drawable/stroke"

        android:paddingStart="10dp"
        android:text="@string/edit_profile"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tVSex"
        tools:layout_editor_absoluteX="0dp"
        app:layout_constraintStart_toStartOf="@id/gdBeginMargin"
        app:layout_constraintEnd_toEndOf="@id/gdEndMargin"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/paddingStart" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdBeginMargin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="15dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdEndMargin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="15dp" />


</androidx.constraintlayout.widget.ConstraintLayout>